[project]
name = "statistical_tests"
version = "0.2.1"
authors = [
    {name = "Abhishek Mishra", email = "abhishekmishra0106@gmail.com"},
    {name = "Siddhant Mishra", email = "mishrasiddhant911@gmail.com"},
    {name = "Anirudh Parameswaran", email = "anirudhparameswaran@gmail.com"}
]
description = "This Package is an implementation of multiple Statistical Tests e.g. ANOVA, CHI SQUARE, Z-TEST, T-TEST"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "statsmodels"
]
